--- a/base/templates/base/template.html
+++ b/base/templates/base/template.html
@@ -1,39 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="{% static 'css/style.css'  %}" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>PayGateway</title>
-    <style>
-      .row {
-        display: flex;
-        justify-content: space-between;
-      }
-      .card2 {
-        
-        margin: 1rem;
-        height: 500px;
-       
-      }
-      .card{
-        padding: 0.4rem 1.4rem;
-      }
-      .img1 {
-        width:25%;
-        
-        
-      }
-      .img2 {
-        width:40%;
-      }
-      .brand-logo{
-        margin-left: 0.7rem;
-      }
-    </style>
   </head>
   <body>
     <nav>
